<resources>
    <string name="app_name">SchoolManager</string>
    <string name="start">Weighted Average Calculator</string>
    <string name="set_goals">Set Goals</string>
    <string name="settings">Change Weight of Categories For Weighted Average Calculator</string>
    <string name="mark_reflection">Mark Reflection</string>
    <string name="calculate_what_you_need_on_your_next_test_to_obtain_a_desired_mark">Calculate what you need on your next test to obtain a desired mark</string>
    <string name="enter_desired_mark">Enter desired mark (%)</string>
    <string name="enter_your_mark">Enter your mark (%)</string>
    <string name="how_much_of_your_final_mark_is_the_test_worth">How much of your final mark is the test worth (%)</string>
    <string name="calculate">Calculate</string>
    <string name="reflection">REFLECTION</string>
    <string name="in_your_next_test_you_need">In your next test you need:</string>
    <string name="change_the_weight_of_each_category_in_percent">Change The Weight of Each Category (in percent)</string>
    <string name="knowledge">Knowledge</string>
    <string name="thinking">Thinking</string>
    <string name="communication">Communication</string>
    <string name="application">Application</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="_30">30</string>
    <string name="_20">20</string>
    <string name="_20communication">20</string>
    <string name="_30application">30</string>
    <string name="check_mark">check mark</string>
    <string name="add_a_goal">Add a Goal</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="set_reminder2">Set Reminder</string>
    <string name="set_reminder3">Set Reminder</string>
    <string name="save">Save</string>
    <string name="save2">Save</string>
    <string name="save3">Save</string>
    <string name="set_reminder4">Set Reminder</string>
    <string name="save4">Save</string>
    <string name="knowledgeMM">Knowledge</string>
    <string name="comm">Comm.</string>
    <string name="thinkingMM">Thinking</string>
    <string name="applicationMM">Application</string>
    <string name="calculate_weighted_average">Calculate Weighted Average</string>
    <string name="reset_marks">Reset Marks</string>
    <string name="weighted_average">Weighted Average:</string>
    <string name="applogo">applogo</string>
</resources>
