<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hrutvik.schoolpersonalizeapp.SetGoal"
    android:background="@drawable/sticky">

    <Button
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_reminder"
        android:layout_below="@+id/setGoal"
        android:layout_toStartOf="@+id/saveButton"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/addGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_goal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#060606"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/setGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/addGoal"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/saveButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveButton"
        android:layout_above="@+id/setGoal2"
        android:layout_alignParentEnd="true"
        android:textSize="18dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setGoal2"
        android:layout_below="@+id/date"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/addGoal"
        android:layout_alignEnd="@+id/saveButton" />

    <Button
        android:id="@+id/date2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_reminder2"
        android:layout_below="@+id/setGoal2"
        android:layout_toStartOf="@+id/saveButton2"
        android:textSize="18dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save2"
        android:id="@+id/saveButton2"
        android:layout_alignBottom="@+id/date2"
        android:layout_alignEnd="@+id/saveButton"
        android:textSize="18dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setGoal3"
        android:layout_below="@+id/date2"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/saveButton2" />

    <Button
        android:id="@+id/date3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_reminder3"
        android:layout_below="@+id/setGoal3"
        android:layout_toStartOf="@+id/saveButton2"
        android:textSize="18dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save3"
        android:id="@+id/saveButton3"
        android:layout_alignBottom="@+id/date3"
        android:layout_alignParentEnd="true"
        android:textSize="18dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setGoal4"
        android:layout_below="@+id/date3"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/saveButton3"
        android:autoText="false" />

    <Button
        android:id="@+id/date4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_reminder4"
        android:layout_below="@+id/setGoal4"
        android:layout_alignStart="@+id/date3"
        android:textSize="18dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save4"
        android:id="@+id/saveButton4"
        android:layout_alignTop="@+id/date4"
        android:layout_alignParentEnd="true"
        android:textSize="18dp" />

</RelativeLayout>
